# mandarin-tone-master

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: static.yml
scripts/: process_sentences.py
src/: App.css  App.jsx  index.css
src/components/: AudioPlayer.jsx  DictionaryButton.jsx  Feedback.jsx  MagnifyingGlassIcon.jsx  NextButton.jsx  SentenceDisplay.jsx  ShuffleIcon.jsx  SpeakerIcon.jsx  ToneInput.jsx
src/data/: sentences.json  sentences.txt
src/utils/: audio.js  tts.js
