[project]
name = "mandarin-tone-master"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tom Dong", email = ""},
]
dependencies = ["pyhanlp>=0.1.89"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
